# TrueClaw

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/mcp-echo-server/: server.py
examples/mcp-http-echo-server/: server.py
examples/trueclaw-plugin-echo/: README.md  pyproject.toml
examples/trueclaw-plugin-echo/src/trueclaw_plugin_echo/: __init__.py  channel.py  plugin.py
scripts/: ci-verify.sh  run.sh
src/trueclaw/: __main__.py
src/trueclaw/agent/: context_builder.py  factory.py  policies.py  runner.py
src/trueclaw/bus/: __init__.py  events.py  queue.py
src/trueclaw/channels/: base.py  delta_coalescer.py  manager.py  models.py  registry.py  slack_adapter.py  telegram.py  telegram_adapter.py  webhook.py
src/trueclaw/cli/: agent_chat.py  config_cmd.py  doctor_cmd.py  gateway_cmd.py  main.py  plugins_cmd.py  smoke.py  tools_cmd.py  verify.py  wake_cmd.py
src/trueclaw/config/: loader.py  schema.py  validate.py
src/trueclaw/gateway/: connection_manager.py  instance_lock.py  protocol.py  rbac.py  server.py  websocket.py  ws_loops.py
src/trueclaw/llm/: errors.py  factory.py  mock.py  openai_compatible.py  provider.py  stream_parser.py
src/trueclaw/observability/: metrics.py  tracing.py
src/trueclaw/plugins/: api.py  discovery.py  loader.py  models.py  resolver.py
src/trueclaw/routing/: route_intent.py  router.py
src/trueclaw/scheduler/: dispatch.py  (+7 more)
src/trueclaw_plugins/: __init__.py
tests/: test_gateway_subscribe.py  test_mcp_mock.py  test_scheduler_leader.py  test_stream_parser.py
workspace/: hello.txt
(+24 files in other folders)
